# xanesnet

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.py  xanesnet_descriptors.py  xanesnet_main_cli.py  xanesnet_routines.py
.github/workflows/: mirror_to_gitlab.yaml
xanesnet/: __init__.py  cli.py  config.py  convolute.py  core.py  core_learn.py  core_predict.py  core_utils.py  dataset.py  descriptors.py  dnn.py  fdmnes.py  io.py  main_cli.py  metrics.py  ml_routines.py  normalise.py  normalisers.py  routines.py  scalers.py  templates.py  utils.py  xanes.py
xanesnet/assets/banners/: banner.txt
xanesnet/configs/: test_config.yaml  xanesnet_2021.yaml
xanesnet/datasets/tmqm/: k_edge_v.npz
xanesnet/descriptors/: __init__.py  descriptors.py  generic.py  rdc.py  wacsf.py
xanesnet/fdmnes_tools/: bav_to_csv.py  bav_to_xyz.py  to_fdmnes.py
xanesnet/resources/: banner_close.txt  banner_open.txt
xanesnet/spectrum/: xanes.py
xanesnet/structure/: descriptors.py  rdc.py  wacsf.py
xanesnet/tmqm_tools/: pull_complexes.py
