[project]
name = "xanesnet"
version = "5.0"
description = """
A Python package for predicting X-ray absorption (XAS) spectra of molecules
and materials using machine learning (ML)
"""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ase>=3.24.0",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]

[project.scripts]
xanesnet = "xanesnet:cli.main"
to_fdmnes = "xanesnet.fdmnes_tools:to_fdmnes.main"
bav_to_xyz = "xanesnet.fdmnes_tools:bav_to_xyz.main"
bav_to_csv = "xanesnet.fdmnes_tools:bav_to_csv.main"
